--- a/Schachmentor/Schachmentor.vcxproj
+++ b/Schachmentor/Schachmentor.vcxproj
@@ -141,17 +141,22 @@
     <ClInclude Include="Brett.h" />
     <ClInclude Include="Compute.h" />
     <ClInclude Include="Comunicate.h" />
+    <ClInclude Include="Convert.h" />
     <ClInclude Include="Figur.h" />
+    <ClInclude Include="Hashbrett.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Spiel.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Taktik.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Brett.cpp" />
     <ClCompile Include="Compute.cpp" />
     <ClCompile Include="Comunicate.cpp" />
+    <ClCompile Include="Convert.cpp" />
     <ClCompile Include="Figur.cpp" />
+    <ClCompile Include="Hashbrett.cpp" />
     <ClCompile Include="Schachmentor.cpp" />
     <ClCompile Include="Spiel.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -160,6 +165,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Taktik.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Schachmentor.rc" />
