--- a/Schachmentor/Schachmentor.vcxproj
+++ b/Schachmentor/Schachmentor.vcxproj
@@ -143,20 +143,24 @@
     <ClInclude Include="Comunicate.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Convert.h" />
+    <ClInclude Include="DeleteHash.h" />
     <ClInclude Include="Figur.h" />
     <ClInclude Include="Hashbrett.h" />
+    <ClInclude Include="ThreadData.h" />
     <ClInclude Include="Movemennt.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Spiel.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Taktik.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Worker.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Brett.cpp" />
     <ClCompile Include="Compute.cpp" />
     <ClCompile Include="Comunicate.cpp" />
     <ClCompile Include="Convert.cpp" />
+    <ClCompile Include="DeleteHash.cpp" />
     <ClCompile Include="Figur.cpp" />
     <ClCompile Include="Hashbrett.cpp" />
     <ClCompile Include="Movemennt.cpp" />
@@ -169,6 +173,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Taktik.cpp" />
+    <ClCompile Include="Worker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Schachmentor.rc" />
