--- a/Schachmentor/Schachmentor.vcxproj.filters
+++ b/Schachmentor/Schachmentor.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="CooWorker.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="CalculusTree.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -123,6 +126,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="CooWorker.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="CalculusTree.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
