--- a/Schachmentor/Schachmentor.vcxproj
+++ b/Schachmentor/Schachmentor.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Convert.h" />
     <ClInclude Include="CooWorker.h" />
+    <ClInclude Include="DeepSearch.h" />
     <ClInclude Include="DeleteHash.h" />
     <ClInclude Include="Figur.h" />
     <ClInclude Include="Hashbrett.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Comunicate.cpp" />
     <ClCompile Include="Convert.cpp" />
     <ClCompile Include="CooWorker.cpp" />
+    <ClCompile Include="DeepSearch.cpp" />
     <ClCompile Include="DeleteHash.cpp" />
     <ClCompile Include="Figur.cpp" />
     <ClCompile Include="Hashbrett.cpp" />
